@@ -72,8 +72,26 @@ export("+.section",
        header,
        heading,
        "heading<-",
+       imagep,
+       interpBarnes,
+       integerToAscii,
+       is.beam,
+       is.xyz,
+       is.enu,
+       integrateTrapezoid,
        julianDay,
        julianCenturyAnomaly,
+       latFormat,
+       latitude,
+       "latitude<-",
+       latlonFormat,
+       loggerToc,
+       lonFormat,
+       longitude,
+       "longitude<-",
+       magneticDeclination,
+       makeFilter,
+       makeSection,
        mapContour,
        mapImage,
        mapLines,
@@ -86,29 +104,6 @@ export("+.section",
        mapText,
        mapZones,
        map2lonlat,
-       plotPolar,
-       plotTaylor,
-       "processingLog<-",
-       processingLog,
-       processingLogItem,
-       processingLogShow,
-       imagep,
-       interpBarnes,
-       integerToAscii,
-       is.beam,
-       is.xyz,
-       is.enu,
-       latFormat,
-       latitude,
-       "latitude<-",
-       latlonFormat,
-       loggerToc,
-       lonFormat,
-       longitude,
-       "longitude<-",
-       magneticDeclination,
-       makeFilter,
-       makeSection,
        matchBytes,
        matrixSmooth,
        moonAngle,
@@ -117,7 +112,6 @@ export("+.section",
        nitrite,
        "nitrite<-",
        numberAsPOSIXct,
-
        oceApprox,
        oce.as.raw,
        oce.as.POSIXlt,
@@ -139,10 +133,15 @@ export("+.section",
        oceSmooth,
        oceSpectrum,
        oce.write.table,
-
        oxygen,
        "oxygen<-",
        parseLatLon,
+       plotPolar,
+       plotTaylor,
+       "processingLog<-",
+       processingLog,
+       processingLogItem,
+       processingLogShow,
        phosphate,
        "phosphate<-",
        pitch,
@@ -154,8 +153,6 @@ export("+.section",
        plotProfile,
        pressure,
        "pressure<-",
-       tdrPatm,
-       tdrTrim,
        prettyPosition,
        pwelch,
        rangeLimit,
@@ -193,10 +190,10 @@ export("+.section",
        retime,
        roll,
        "roll<-",
-       secondsToCtime,
        resizableLabel,
        salinity,
        "salinity<-",
+       secondsToCtime,
        sectionGrid,
        sectionSmooth,
        sectionSort,
@@ -205,12 +202,7 @@ export("+.section",
        sigmaTheta,
        silicate,
        "silicate<-",
-       # TEST subset.oce,
-       # TEST summary.ctd,
-       # TEST summary.echosounder,
-       # TEST summary.lisst,
-       # TEST summary.met,
-       # TEST summary.sealevel,
+       standardDepths,
        sunAngle,
        swAbsoluteSalinity, # TEOS-10
        swAlpha,
@@ -253,7 +245,8 @@ export("+.section",
        toEnuAdp,
        toEnuAdv,
        topoInterpolate,
-       integrateTrapezoid,
+       tdrPatm,
+       tdrTrim,
        tritium,
        unabbreviateYear,
        undriftTime,
