@@ -1,4 +1,5 @@
 0.9-13
+- standardDepths() added
 - mapLongitudeLatitudeXY() added
 - read.ctd.woce() now accepts a format used once by Arctic scientists
 - swRrho() added
